psy-interpreter/src/snapshots/psy_interpreter__tests__interpreter@struct_field_test.psy.snap
---
source: psy-interpreter/src/lib.rs
expression: "ctx.debug_scope(ScopeId::root())"
input_file: tests/struct_field_test.psy
---
ScopeId(0) (Module)
    Types:
        pub struct Person (TypeId(54))
            Fields:
                pub Felt age (Identifier { id: IdentId(23), location: Location { file_id: FileId(0), start: 28, end: 31 } }, TypeId(54))
                bool male (Identifier { id: IdentId(24), location: Location { file_id: FileId(0), start: 43, end: 47 } }, TypeId(54))
        struct Family (TypeId(55))
            Fields:
                Person father (Identifier { id: IdentId(26), location: Location { file_id: FileId(0), start: 78, end: 84 } }, TypeId(55))
                Person mother (Identifier { id: IdentId(27), location: Location { file_id: FileId(0), start: 98, end: 104 } }, TypeId(55))
                pub Array children (Identifier { id: IdentId(28), location: Location { file_id: FileId(0), start: 122, end: 130 } }, TypeId(55))
        fn main (TypeId(56))
            Return Type: void (TypeId(1))
            Body: ExprId(263)
        pub trait Storage (TypeId(13))
            Body: [DefId(0), DefId(1), DefId(2)]
            Unchecked Body: [DefId(12), DefId(13), DefId(14)]
        pub trait StorageAt (TypeId(17))
            Body: [DefId(4), DefId(5)]
            Unchecked Body: [DefId(16), DefId(17)]
            Generic Parameters: [TypeId(57), TypeId(58)]
        pub struct StorageRef (TypeId(19))
            Fields:
                pub Felt offset (Identifier { id: IdentId(44), location: Location { file_id: FileId(4), start: 3362, end: 3368 } }, TypeId(19))
                pub ContractMetadata metadata (Identifier { id: IdentId(53), location: Location { file_id: FileId(4), start: 3384, end: 3392 } }, TypeId(19))
            Generic Parameters: [TypeId(82), TypeId(83)]
        pub struct ContractMetadata (TypeId(20))
            Fields:
                pub Felt contract_state_tree_height (Identifier { id: IdentId(41), location: Location { file_id: FileId(4), start: 4234, end: 4260 } }, TypeId(20))
                pub Felt contract_id (Identifier { id: IdentId(43), location: Location { file_id: FileId(4), start: 4276, end: 4287 } }, TypeId(20))
                pub Felt user_id (Identifier { id: IdentId(42), location: Location { file_id: FileId(4), start: 4303, end: 4310 } }, TypeId(20))
        pub trait StorageAt (TypeId(78))
            Body: [DefId(62), DefId(63)]
            Unchecked Body: [DefId(16), DefId(17)]
            Generic Parameters: [TypeId(74), TypeId(75)]
        pub struct StorageRef (TypeId(86))
            Fields:
                pub Felt offset (Identifier { id: IdentId(44), location: Location { file_id: FileId(4), start: 3362, end: 3368 } }, TypeId(86))
                pub ContractMetadata metadata (Identifier { id: IdentId(53), location: Location { file_id: FileId(4), start: 3384, end: 3392 } }, TypeId(86))
            Generic Parameters: [TypeId(84), TypeId(85)]
        pub struct StorageRef (TypeId(92))
            Fields:
                pub Felt offset (Identifier { id: IdentId(44), location: Location { file_id: FileId(4), start: 3362, end: 3368 } }, TypeId(92))
                pub ContractMetadata metadata (Identifier { id: IdentId(53), location: Location { file_id: FileId(4), start: 3384, end: 3392 } }, TypeId(92))
            Generic Parameters: [TypeId(84), TypeId(91)]
        pub fn get_user_id (TypeId(21))
            Return Type: Felt (TypeId(3))
            Body: ExprId(146)
        pub fn get_contract_id (TypeId(22))
            Return Type: Felt (TypeId(3))
            Body: ExprId(148)
        pub fn get_contract_deployer (TypeId(23))
            Parameters:
                Felt contract_id (Identifier { id: IdentId(43), location: Location { file_id: FileId(5), start: 179, end: 190 } }, TypeId(23))
            Return Type: Array (TypeId(9))
            Body: ExprId(151)
        pub fn get_caller_contract_id (TypeId(24))
            Return Type: Felt (TypeId(3))
            Body: ExprId(153)
        pub fn get_checkpoint_id (TypeId(25))
            Return Type: Felt (TypeId(3))
            Body: ExprId(155)
        pub fn get_register_users_root (TypeId(26))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 437, end: 450 } }, TypeId(26))
            Return Type: Array (TypeId(9))
            Body: ExprId(158)
        pub fn get_gutas_root (TypeId(27))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 542, end: 555 } }, TypeId(27))
            Return Type: Array (TypeId(9))
            Body: ExprId(161)
        pub fn get_deploy_contracts_root (TypeId(28))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 649, end: 662 } }, TypeId(28))
            Return Type: Array (TypeId(9))
            Body: ExprId(164)
        pub fn get_guta_fees_collected (TypeId(29))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 765, end: 778 } }, TypeId(29))
            Return Type: Felt (TypeId(3))
            Body: ExprId(167)
        pub fn get_da_fees_collected (TypeId(30))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 877, end: 890 } }, TypeId(30))
            Return Type: Felt (TypeId(3))
            Body: ExprId(170)
        pub fn get_user_ops_processed (TypeId(31))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 988, end: 1001 } }, TypeId(31))
            Return Type: Felt (TypeId(3))
            Body: ExprId(173)
        pub fn get_total_transactions (TypeId(32))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 1100, end: 1113 } }, TypeId(32))
            Return Type: Felt (TypeId(3))
            Body: ExprId(176)
        pub fn get_slots_modified (TypeId(33))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 1208, end: 1221 } }, TypeId(33))
            Return Type: Felt (TypeId(3))
            Body: ExprId(179)
        pub fn get_deploy_contracts_completed (TypeId(34))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 1324, end: 1337 } }, TypeId(34))
            Return Type: Felt (TypeId(3))
            Body: ExprId(182)
        pub fn get_register_users_completed (TypeId(35))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 1450, end: 1463 } }, TypeId(35))
            Return Type: Felt (TypeId(3))
            Body: ExprId(185)
        pub fn get_gutas_completed (TypeId(36))
            Parameters:
                Felt checkpoint_id (Identifier { id: IdentId(64), location: Location { file_id: FileId(5), start: 1565, end: 1578 } }, TypeId(36))
            Return Type: Felt (TypeId(3))
            Body: ExprId(188)
        pub fn get_last_nonce (TypeId(37))
            Return Type: Felt (TypeId(3))
            Body: ExprId(190)
        pub fn get_user_public_key_hash (TypeId(38))
            Return Type: Array (TypeId(9))
            Body: ExprId(192)
        pub fn get_state_hash_at (TypeId(39))
            Parameters:
                Felt slot_index (Identifier { id: IdentId(78), location: Location { file_id: FileId(5), start: 1817, end: 1827 } }, TypeId(39))
            Return Type: Array (TypeId(9))
            Body: ExprId(195)
        pub fn get_other_contract_state_hash_at (TypeId(40))
            Parameters:
                Felt contract_state_tree_height (Identifier { id: IdentId(41), location: Location { file_id: FileId(5), start: 1928, end: 1954 } }, TypeId(40))
                Felt contract_id (Identifier { id: IdentId(43), location: Location { file_id: FileId(5), start: 1962, end: 1973 } }, TypeId(40))
                Felt slot_index (Identifier { id: IdentId(78), location: Location { file_id: FileId(5), start: 1981, end: 1991 } }, TypeId(40))
            Return Type: Array (TypeId(9))
            Body: ExprId(200)
        pub fn get_other_user_contract_state_hash_at (TypeId(41))
            Parameters:
                Felt contract_state_tree_height (Identifier { id: IdentId(41), location: Location { file_id: FileId(5), start: 2153, end: 2179 } }, TypeId(41))
                Felt user_id (Identifier { id: IdentId(42), location: Location { file_id: FileId(5), start: 2187, end: 2194 } }, TypeId(41))
                Felt contract_id (Identifier { id: IdentId(43), location: Location { file_id: FileId(5), start: 2202, end: 2213 } }, TypeId(41))
                Felt slot_index (Identifier { id: IdentId(78), location: Location { file_id: FileId(5), start: 2221, end: 2231 } }, TypeId(41))
            Return Type: Array (TypeId(9))
            Body: ExprId(206)
        pub fn cset_state_hash_at (TypeId(42))
            Parameters:
                Felt slot_index (Identifier { id: IdentId(78), location: Location { file_id: FileId(5), start: 2388, end: 2398 } }, TypeId(42))
                Array new_value (Identifier { id: IdentId(82), location: Location { file_id: FileId(5), start: 2406, end: 2415 } }, TypeId(42))
            Return Type: Array (TypeId(9))
            Body: ExprId(210)
        pub fn invoke_sync (TypeId(43))
            Parameters:
                Felt contract_id (Identifier { id: IdentId(43), location: Location { file_id: FileId(5), start: 2512, end: 2523 } }, TypeId(43))
                Felt method_id (Identifier { id: IdentId(85), location: Location { file_id: FileId(5), start: 2531, end: 2540 } }, TypeId(43))
                U inputs (Identifier { id: IdentId(86), location: Location { file_id: FileId(5), start: 2548, end: 2554 } }, TypeId(43))
            Return Type: T (TypeId(97))
            Body: ExprId(215)
            Generic Parameters: [TypeId(97), TypeId(98)]
        pub fn invoke_deferred (TypeId(44))
            Parameters:
                Felt contract_id (Identifier { id: IdentId(43), location: Location { file_id: FileId(5), start: 2652, end: 2663 } }, TypeId(44))
                Felt method_id (Identifier { id: IdentId(85), location: Location { file_id: FileId(5), start: 2671, end: 2680 } }, TypeId(44))
                U inputs (Identifier { id: IdentId(86), location: Location { file_id: FileId(5), start: 2688, end: 2694 } }, TypeId(44))
            Return Type: void (TypeId(1))
            Body: ExprId(220)
            Generic Parameters: [TypeId(99), TypeId(100)]
        pub fn clear_entire_tree (TypeId(45))
            Return Type: void (TypeId(1))
            Body: ExprId(221)
        pub Felt (TypeId(3))
        pub Array (TypeId(7))
        pub CheckedValueRef(RwLock { data: U32(4u32), poisoned: false, .. }) (TypeId(8))
        pub Array (TypeId(9))
        pub Array (TypeId(9))
        pub Array (TypeId(70))
        pub Array (TypeId(79))
        pub CheckedValueRef(RwLock { data: U32(1u32), poisoned: false, .. }) (TypeId(91))
        pub trait Default (TypeId(47))
            Body: [DefId(34)]
            Unchecked Body: [DefId(76)]
        pub fn transmute (TypeId(49))
            Parameters:
                T x (Identifier { id: IdentId(90), location: Location { file_id: FileId(7), start: 23, end: 24 } }, TypeId(49))
            Return Type: U (TypeId(104))
            Body: ExprId(230)
            Generic Parameters: [TypeId(104), TypeId(105)]
        pub fn size_of (TypeId(50))
            Return Type: Felt (TypeId(3))
            Body: ExprId(232)
            Generic Parameters: [TypeId(106)]
        pub trait Event (TypeId(52))
            Body: [DefId(38)]
            Unchecked Body: [DefId(86)]
    ScopeId(50) (Struct)
    ScopeId(51) (Struct)
    ScopeId(52) (Function)
        ScopeId(141) (Block)
            Variables:
                father: Person
                mother: Person
                mut boy: Person
                girl: Person
                mut family: Family
